--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
@@ -160,151 +160,154 @@
         </div>
         <div class="windowTable meilensteinTable">
             <table>
-                <tr>
-                    <th>Nummer</th>
-                    <th>Meilenstein</th>
-                    <th>Bis Datum</th>
-                    <th>Status</th>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">01</a></td>
-                    <td><a routerLink="/">Konzept</a></td>
-                    <td><a routerLink="/">01.03.2022</a></td>
-                    <td><a routerLink="/">Abgeschlossen</a></td>
-                </tr>
-
+                <thead>
+                    <tr>
+                        <th>Nummer</th>
+                        <th>Meilenstein</th>
+                        <th>Bis Datum</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">01</a></td>
+                        <td><a routerLink="/">Konzept</a></td>
+                        <td><a routerLink="/">01.03.2022</a></td>
+                        <td><a routerLink="/">Abgeschlossen</a></td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </div>
@@ -328,7 +331,7 @@
                     <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
                     <td><a routerLink="/">1</a></td>
                     <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
                     <td><a routerLink="/">0%</a></td>
                     <td><a routerLink="/">CHF 1500.10.-</a></td>
                 </tr>
@@ -337,7 +340,7 @@
                     <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
                     <td><a routerLink="/">1</a></td>
                     <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
                     <td><a routerLink="/">0%</a></td>
                     <td><a routerLink="/">CHF 1500.10.-</a></td>
                 </tr>
@@ -346,7 +349,7 @@
                     <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
                     <td><a routerLink="/">1</a></td>
                     <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
                     <td><a routerLink="/">0%</a></td>
                     <td><a routerLink="/">CHF 1500.10.-</a></td>
                 </tr>
@@ -355,7 +358,7 @@
                     <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
                     <td><a routerLink="/">1</a></td>
                     <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
                     <td><a routerLink="/">0%</a></td>
                     <td><a routerLink="/">CHF 1500.10.-</a></td>
                 </tr>
@@ -364,7 +367,7 @@
                     <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
                     <td><a routerLink="/">1</a></td>
                     <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
                     <td><a routerLink="/">0%</a></td>
                     <td><a routerLink="/">CHF 1500.10.-</a></td>
                 </tr>
@@ -373,10 +376,29 @@
                     <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
                     <td><a routerLink="/">1</a></td>
                     <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
                     <td><a routerLink="/">0%</a></td>
                     <td><a routerLink="/">CHF 1500.10.-</a></td>
                 </tr>
+                <tr>
+                    <td><a routerLink="/">001</a></td>
+                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                    <td><a routerLink="/">1</a></td>
+                    <td><a routerLink="/">Pauschal</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                    <td><a routerLink="/">0%</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">001</a></td>
+                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                    <td><a routerLink="/">1</a></td>
+                    <td><a routerLink="/">Pauschal</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                    <td><a routerLink="/">0%</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                </tr>
+
                 <tr class="zwischenSpalte">
                     <td colspan="7"></td>
                 </tr>
