--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
@@ -13,7 +13,7 @@
 /* Spalten */ 
 .split
     display: inline-block
-    width: calc(calc($gesamteBreite - 35px) /3.2)
+    width: calc(calc($gesamteBreite - 25px) /3.2)
     margin-top: 10px
     vertical-align: top
 
@@ -106,3 +106,10 @@
 /* Meilensteine */
 .meilensteinTable
     margin-right: 10px
+
+.windowTable
+    margin-right: 15px
+
+.meilensteinTable tbody
+    max-height: calc( $zweiTeiligeHoeheUnten - 75px )
+
