--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
@@ -74,101 +74,119 @@
         </div>
         <div class="positionTable">
             <table>
-                <tr>
-                    <th>Position</th>
-                    <th>Beschreibung</th>
-                    <th>Menge</th>
-                    <th>Einheit</th>
-                    <th>Einzelpreis</th>
-                    <th>Rabatt</th>
-                    <th>Endpreis</th>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">001</a></td>
-                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                    <td><a routerLink="/">1</a></td>
-                    <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                    <td><a routerLink="/">0%</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">001</a></td>
-                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                    <td><a routerLink="/">1</a></td>
-                    <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                    <td><a routerLink="/">0%</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">001</a></td>
-                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                    <td><a routerLink="/">1</a></td>
-                    <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                    <td><a routerLink="/">0%</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">001</a></td>
-                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                    <td><a routerLink="/">1</a></td>
-                    <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                    <td><a routerLink="/">0%</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">001</a></td>
-                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                    <td><a routerLink="/">1</a></td>
-                    <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                    <td><a routerLink="/">0%</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-</a></td>
-                </tr>
-                <tr>
-                    <td><a routerLink="/">001</a></td>
-                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
-                    <td><a routerLink="/">1</a></td>
-                    <td><a routerLink="/">Pauschal</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
-                    <td><a routerLink="/">0%</a></td>
-                    <td><a routerLink="/">CHF 1500.10.-</a></td>
-                </tr>
-                <tr class="zwischenSpalte">
-                    <td colspan="7"></td>
-                </tr>
-                <tr class="total">
-                    <td></td>
-                    <td colspan="5">Total vor Steuer</td>
-                    <td>CHF 2'350.00.-</td>
-                </tr>
-                <tr class="total">
-                    <td></td>
-                    <td colspan="5">Steuer</td>
-                    <td>CHF 0.00.-</td>
-                </tr>
-                <tr class="total">
-                    <td></td>
-                    <td colspan="5">Total nach Steuer</td>
-                    <td class="endTotal">CHF 2'350.00.-</td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>Position</th>
+                        <th>Beschreibung</th>
+                        <th>Menge</th>
+                        <th>Einheit</th>
+                        <th>Einzelpreis</th>
+                        <th>Rabatt</th>
+                        <th>Endpreis</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a routerLink="/">001</a></td>
+                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                        <td><a routerLink="/">1</a></td>
+                        <td><a routerLink="/">Pauschal</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                        <td><a routerLink="/">0%</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">001</a></td>
+                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                        <td><a routerLink="/">1</a></td>
+                        <td><a routerLink="/">Pauschal</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                        <td><a routerLink="/">0%</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">001</a></td>
+                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                        <td><a routerLink="/">1</a></td>
+                        <td><a routerLink="/">Pauschal</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                        <td><a routerLink="/">0%</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">001</a></td>
+                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                        <td><a routerLink="/">1</a></td>
+                        <td><a routerLink="/">Pauschal</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                        <td><a routerLink="/">0%</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">001</a></td>
+                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                        <td><a routerLink="/">1</a></td>
+                        <td><a routerLink="/">Pauschal</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                        <td><a routerLink="/">0%</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-</a></td>
+                    </tr>
+                    <tr>
+                        <td><a routerLink="/">001</a></td>
+                        <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                        <td><a routerLink="/">1</a></td>
+                        <td><a routerLink="/">Pauschal</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                        <td><a routerLink="/">0%</a></td>
+                        <td><a routerLink="/">CHF 1500.10.-</a></td>
+                    </tr>
+                    <tr class="zwischenSpalte">
+                        <td colspan="7"></td>
+                    </tr>
+                    <tr class="total">
+                        <td></td>
+                        <td>Total vor Steuer</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>CHF 2'350.00.-</td>
+                    </tr>
+                    <tr class="total">
+                        <td></td>
+                        <td>Steuer</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>CHF 0.00.-</td>
+                    </tr>
+                    <tr class="total">
+                        <td></td>
+                        <td>Total nach Steuer</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td class="endTotal">CHF 2'350.00.-</td>
+                    </tr>
+                </tbody>
             </table>
-            <div class="split firstSplit">
-                <div class="btnPositionen">
-                    <p (click)="openPosition()">Position erfassen</p>
+            <div class="tableMenu">
+                <div class="split firstSplit">
+                    <div class="btnPositionen">
+                        <p (click)="openPosition()">Position erfassen</p>
+                    </div>
                 </div>
-            </div>
-            <div class="split secondSplit">
-                <div class="btnPositionen">
-                    <p>Position entfernen</p>
+                <div class="split secondSplit">
+                    <div class="btnPositionen">
+                        <p>Position entfernen</p>
+                    </div>
                 </div>
-            </div>
-            <div class="split thirdSplit">
-                <div class="btnPositionen">
-                    <p (click)="openTextposition()">Textposition erfassen</p>
+                <div class="split thirdSplit">
+                    <div class="btnPositionen">
+                        <p (click)="openTextposition()">Textposition erfassen</p>
+                    </div>
                 </div>
             </div>
         </div>
