--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
@@ -4,7 +4,7 @@
     
 .split
     display: inline-block
-    width: calc(calc($gesamteBreite - 35px) /3.2)
+    width: calc(calc($gesamteBreite - 25px) /3.2)
     margin-top: 10px
     vertical-align: top
 
@@ -18,7 +18,6 @@
 .thirdSplit
     margin-left: 10px
 
-
 .split p
     display: inline-block
     padding: 2px
@@ -27,3 +26,15 @@
 
 .dropDown select
     text-align: center
+
+.windowTable
+    margin-right: 15px
+
+.tableMenu div
+    margin-top: -5px
+
+.positionTable tbody
+    max-height: calc( $zweiTeiligeHoeheUnten - 100px )
+    overflow: scroll
+
+
