--- a/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
+++ b/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
@@ -67,189 +67,192 @@
                 <button type="button" class="btnErfassen" (click)="openGenerateMitarbeiter()">Mitarbeiter Erfassen</button>
             </div>
         </div>
-        <div class="windowTable">
+        <div class="windowTable mitarbeiterTable">
             <table>
-                <tr>
-                    <th>Nummer</th>
-                    <th>Name</th>
-                    <th>Vorname</th>
-                    <th>Funktion</th>
-                    <th>Abteilung</th>
-                    <th>Stellenprozent</th>
-                    <th>Administrator</th>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-                <tr>
-                    <td>MA 100-001</td>
-                    <td>Brändle</td>
-                    <td>Thomas</td>
-                    <td>Geschäftsführer</td>
-                    <td>Geschäftsleitung</td>
-                    <td>100%</td>
-                    <td>Ja</td>
-                </tr>
-
+                <thead>
+                    <tr>
+                        <th>Nummer</th>
+                        <th>Name</th>
+                        <th>Vorname</th>
+                        <th>Funktion</th>
+                        <th>Abteilung</th>
+                        <th>Stellenprozent</th>
+                        <th>Administrator</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                    <tr>
+                        <td>MA 100-001</td>
+                        <td>Brändle</td>
+                        <td>Thomas</td>
+                        <td>Geschäftsführer</td>
+                        <td>Geschäftsleitung</td>
+                        <td>100%</td>
+                        <td>Ja</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </div>
