--- a/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.sass
+++ b/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.sass
@@ -68,4 +68,10 @@
 .btnErfassen button
     background-color: $tableColor
 
+.mitarbeiterTable tbody
+    max-height: calc( $zweiTeiligeHoeheUnten - 60px )
+    overflow: scroll
+
+
+
     
