--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
@@ -32,6 +32,58 @@
             </div>
         </div>
         <div class="split secondSplit">
+            <div class="row">
+                <p class="unterTitel">Gruppen und Kategorien</p>
+                <select name="zahlungsbedingungen" id="zahlungsbedingungen">
+                    <option value="zb_01">10 Tage 3% Skonto, 30 Tage Netto</option>
+                    <option value="zb_02">7 Tage 2% Skonto, 20 Tage Netto</option>
+                    <option value="zb_03">30 Tage Netto</option>
+                    <option value="zb_04">14 Tage Netto</option>
+                    <option value="zb_05">Vorauskasse</option>
+                    <option value="zb_06">Barzahlung</option>
+                    <option value="zb_07">Teilzahlung</option>
+                </select>
+                <div class="btnBearbeiten">
+                    <p>Zahlungskonditionen bearbeiten</p>
+                </div>
+                <select name="zahlungsarten" id="zahlungsarten">
+                    <option value="za_01">Rechnung</option>
+                    <option value="za_02">Vorauskasse</option>
+                    <option value="za_03">Barzahlung</option>
+                </select>
+                <div class="btnBearbeiten">
+                    <p>Zahlungsarten bearbeiten</p>
+                </div>
+                <select name="artikelgruppen" id="artikelgruppen">
+                    <option value="ag_01">Webentwicklung</option>
+                    <option value="ag_02">Fotografie</option>
+                    <option value="ag_03">Videografie</option>
+                    <option value="ag_04">Anderes</option>
+                </select>
+                <div class="btnBearbeiten">
+                    <p>Artikelgruppen bearbeiten</p>
+                </div>
+                <select name="kundengruppen" id="kundengruppen">
+                    <option value="kg_01">Privatperson</option>
+                    <option value="kg_02">Geschäftspartner</option>
+                    <option value="kg_03">Verein</option>
+                    <option value="kg_04">Anderes</option>
+                </select>
+                <div class="btnBearbeiten">
+                    <p>Kundengruppen bearbeiten</p>
+                </div>
+                <select name="abteilungen" id="abteilungen">
+                    <option value="ab_01">Entwicklung</option>
+                    <option value="ab_02">Geschäftsleitung</option>
+                    <option value="ab_03">Sekretariat</option>
+                    <option value="ab_04">Lernende</option>
+                    <option value="ab_04">Anderes</option>
+                </select>
+                <div class="btnBearbeiten">
+                    <p>Artikelgruppen bearbeiten</p>
+                </div>
+
+            </div>
         </div>
         <div class="split thirdSplit">
             <div class="row">
