--- a/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
+++ b/src/app/_popupKomponente/generate-projekt/generate-projekt.component.html
@@ -1,4 +1,4 @@
-<div class="generateProject">
+<div class="popupWindow generateProject">
     <div class="popupHeader">
         <div class="headerBezeichnung">
             <p>Projekt erfassen</p>
