--- a/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
+++ b/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
@@ -1,7 +1,7 @@
-<div class="generateProject">
+<div class="popupWindow">
     <div class="popupHeader">
         <div class="headerBezeichnung">
-            <p>Projekt erfassen</p>
+            <p>Rechnungsadresse</p>
         </div>
         <div class="closeTab">
             <span (click)="closeModal()" class="close"><img [src]="close" alt=""></span>
@@ -14,9 +14,10 @@
         </div>
         <div class="split thirdSplit">
         </div>
-        <div class="popupFooter">
-            <div class="btnBearbeiten btnSpeichern">
-                <p>Projekt erfassen</p>
-            </div>
+    </div>
+    <div class="popupFooter">
+        <div class="btnBearbeiten btnSpeichern">
+            <p>Änderungen speichern</p>
         </div>
     </div>
+</div>
