--- a/src/sass/_window.sass
+++ b/src/sass/_window.sass
@@ -53,7 +53,7 @@ $fixLinks: calc(calc(calc(100vw - 1300px) / 2) + 115px)
     border: 1px solid $borderColor
     border-radius: 20px
     margin-top: 5px
-    overflow-y: scroll
+    overflow-y: hidden
     overflow-x: hidden
 
 .oben
@@ -113,7 +113,7 @@ $fixLinks: calc(calc(calc(100vw - 1300px) / 2) + 115px)
 
 /* ### Fünf Teilig ### */
 .fiveMR
-    overflow-y: scroll
+    overflow-y: hidden
     overflow-x: hidden
 
 .fiveOben,
