--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.sass
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.sass
@@ -8,9 +8,10 @@
 /* Einteilung */
 .split
     display: inline-block
-    width: 32%
+    width: 30.5%
     margin-top: 10px
     vertical-align: top
+    margin-right: 15px
 
 .firstSplit
     margin-left: 40px
